# casino

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
examples/: beam_bending.rs  nonlinear_circuit.rs  stress_model.rs
src/: builder.rs  controller.rs  core.rs  graph.rs  input.rs  input_.rs  lib.rs  observer.rs  operator.rs  output.rs  pipeline.rs  result.rs  stats.rs  stats_.rs
src/input/: input.rs  mod.rs  model.rs  sampling.rs
src/stats/: mod.rs  running_stats.rs  sample_batch.rs  summary.rs
tests/: linear.rs  mod.rs  nonlinear.rs
