[package]
name = "casino"
version = "0.1.1"
edition = "2021"
license = "MIT"
publish = ["sensorium-tl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = { version = "0.8.1", features = ["_ndarrayl"] }
# blas-src = { version = "0.9", features = ["openblas"] }
# openblas-src = { version = "0.10", features = ["cblas", "system"] }

ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0" }
ndarray-rand = "0.14.0"
num-traits = "0.2.19"
rand_isaac = "0.3.0"
tracing = "0.1.40"

[dev-dependencies]
approx = "0.5.1"
rand_isaac = "0.3.0"
