[package]
name = "casino"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Monte Carlo Distribution Propagator"
authors = ["Christopher Gubbin <chris.gubbin@gmail.com>"]
repository = "https://github.com/cgubbin/casino"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = { version = "0.10.0", features = ["_ndarrayl"] }
# blas-src = { version = "0.9", features = ["openblas"] }
# openblas-src = { version = "0.10", features = ["cblas", "system"] }

ndarray = "0.17.0"
ndarray-linalg = { version = "0.18.1", features=["openblas-static"] }
ndarray-rand = "0.16.0"
num-traits = "0.2"
thiserror = "2.0.18"
tracing = "0.1.44"

[dev-dependencies]
approx = "0.5.1"
cargo-husky = "1.5.0"

